# util

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  TODO  fbstream_test_file  filebuftest  util.code-workspace
include/logicmill/: bstream.h  buffer.h  traits.h  types.h
include/logicmill/armi/: armi.h  async_adapter.h  async_io_traits.h  client_context.h  client_context_base.h  client_context_builder.h  client_proxy.h  client_proxy_base.h  error.h  fail_proxy.h  interface_proxy.h  interface_stub.h  interface_stub_base.h  interface_stub_builder.h  macros.h  member_func_proxy.h  member_func_stub.h  member_func_stub_base.h  method_proxy.h  method_stub.h  method_stub_base.h  remote_context.h  reply_handler.h  reply_handler_base.h  reply_proxy.h  reply_stub.h  serialization_traits.h  server_context.h  server_context_base.h  server_context_builder.h  server_stub.h  server_stub_base.h  server_stub_builder.h  traits.h  transport.h  transport_traits.h  types.h
include/logicmill/armi/adapters/: bridge.h
include/logicmill/async/: address.h  channel.h  endpoint.h  error.h  event.h  event_flow.h  loop.h  options.h  resolve_request.h  resolver.h  socket.h  stream.h  tcp.h  timer.h  traits.h  transceiver.h
include/logicmill/bstream/: base_classes.h  buffer.h  context.h  error.h  error_category_context.h  fwd_decls.h  ibfilebuf.h  ibmembuf.h  ibsharedbuf.h  ibstream.h  ibstream_traits.h  ibstreambuf.h  ifbstream.h  imbstream.h  macros.h  memory.h  msgpack.h  numstream.h  obfilebuf.h  obmembuf.h  obmultibuf.h  obstream.h  obstream_traits.h  obstreambuf.h  ofbstream.h  ombstream.h  seq_sink.h  seq_source.h  sink.h  source.h  stdlib.h  traits.h  typecode.h  types.h
include/logicmill/bstream/buffer/: sink.h  source.h
include/logicmill/bstream/bufseq/: sink.h  source.h
include/logicmill/bstream/compound_memory/: sink.h  source.h
include/logicmill/bstream/file/: sink.h  source.h
include/logicmill/bstream/memory/: sink.h  source.h
include/logicmill/bstream/random/: sink.h  source.h  source_base.h
include/logicmill/bstream/sequential/: sink.h  source.h
include/logicmill/bstream/stdlib/: chrono.h  deque.h  forward_list.h  list.h  map.h  pair.h  set.h  tuple.h  unordered_map.h  unordered_set.h  vector.h
include/logicmill/bstream/utils/: dumpster.h  memory.h  preprocessor.h  traits.h
include/logicmill/laps/: channel_anchor.h  driver.h  framer.h  merging_framer.h  tls.h  types.h
include/logicmill/ras/: client_context.h  client_context_base.h  client_context_builder.h  error.h  fail_proxy.h  interface_proxy.h  interface_stub.h  interface_stub_base.h  interface_stub_builder.h  macros.h  method_proxy.h  method_stub.h  method_stub_base.h  ras.h  remote_context.h  reply_handler.h  reply_handler_base.h  reply_proxy.h  reply_stub.h  server_context.h  server_context_base.h  server_context_builder.h  traits.h  types.h
include/logicmill/util/: allocator.h  buffer.h  buffer_traits.h  dumpster.h  error_context.h  macro_switches.h  macros.h  membuf.h  preprocessor.h  promise.h  shareable.h  shared_ptr.h
include/util/: allocator.h  buffer.h  dumpster.h  error.h  error_context.h  macros.h  membuf.h  preprocessor.h  promise.h  promise_timer.h  region.h  shared_ptr.h  traits.h  types.h
src/: buffer.cpp  fs_impl.cpp
src/armi/: client_context_base.cpp  error.cpp  fail_proxy.cpp  interface_proxy.cpp  interface_stub_base.cpp  server_context_base.cpp
src/armi/adapters/async/: channel_manager.cpp  client_adapter.cpp  server_adapter.cpp
src/async/: address.cpp  error.cpp  loop_uv.cpp  loop_uv.h  resolve_request_uv.cpp  resolve_request_uv.h  tcp_uv.cpp  tcp_uv.h  timer_uv.cpp  timer_uv.h  udp_uv.cpp  udp_uv.h  uv_async.cpp  uv_error.h
src/bstream/: buffer.cpp  buffer_sink.cpp  bufseq_sink.cpp  compound_memory_sink.cpp  error.cpp  error_category_context.cpp  file_rand_src.cpp  file_seq_snk.cpp  file_seq_src.cpp  file_sink.cpp  file_source.cpp  ibfilebuf.cpp  ibmembuf.cpp  ibsharedbuf.cpp  ibstream.cpp  ibstreambuf.cpp  mem_smpl_rand_snk.cpp  mem_smpl_seq_snk.cpp  memory_simple_sink.cpp  memory_sink.cpp  numstream.cpp  obfilebuf.cpp  obmembuf.cpp  obmultibuf.cpp  obstream.cpp  obstreambuf.cpp  rand_snk.cpp  rand_src.cpp  seq_sink.cpp  seq_snk.cpp  seq_src.cpp  sink.cpp  source.cpp
src/bstream/random/: rsink.cpp  source_base.cpp
src/bstream/sequential/: source.cpp
src/laps/: error.cpp  tls.cpp
src/ras/: client_context_base.cpp  error.cpp  fail_proxy.cpp  interface_proxy.cpp  interface_stub_base.cpp  server_context_base.cpp
src/util/: buffer.cpp  error.cpp  error_context.cpp
test/: allocators.cpp  buffer.cpp  doctest.h  loop.cpp  shareable.cpp
test/armi/: basic.cpp  basic_cereal.cpp  example.cpp  example_cereal.cpp
test/async/: address.cpp  endpoint.cpp  event.cpp  event_flow.cpp  framer.cpp  loop.cpp  socket_behavior.cpp  stream.cpp  tcp.cpp  udp.cpp
test/bstream/: abstract_source.cpp  bstreambuf.cpp  bufseq.cpp  common.h  compound_memory.cpp  fbstream.cpp  file.cpp  file_rand.cpp  file_rand_src_sink.cpp  file_seq.cpp  file_seq_src_sink.cpp  mem_smpl_rand.cpp  mem_smpl_seq.cpp  memory.cpp  memory_simple.cpp  random.cpp  random_src_sink.cpp  sequential.cpp  sequential_src_sink.cpp  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
test/bstream/test_probes/: base.h  buffer.h  bufseq.h  compound_memory.h  file.h  memory.h
test/laps/: layers.cpp  tls_layer.cpp
test/ras/: basic.cpp
test/util/: allocators.cpp  asio_adapter.h  buffer.cpp  error_context.cpp  ghetto_async.h  map_error_code.h  membuf.cpp  promise.cpp  shareable.cpp  shared_ptr.cpp
(+24 files in other folders)
